Fixed the collapser button in Firefox.
git-svn-id: http://svn.ckeditor.com/CKEditor/branches/features/sharedspaces@4650 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/_source/skins/kama/toolbar.css
+++ b/_source/skins/kama/toolbar.css
@@ -399,3 +399,9 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 {
 	margin-bottom: 0;
 }
+
+.cke_skin_kama .cke_browser_gecko .cke_toolbox
+{
+	/* Define the padding-bottom otherwise the collapser button will not be clicable in FF */
+	padding-bottom: 1px;
+}
